--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.118.0
 uvicorn==0.37.0
 pydantic==2.11.10
 jinja2==3.1.4
+email-validator==2.1.0
 
 SQLAlchemy==2.0.36
 mysql-connector-python==9.0.0
